@@ -2,8 +2,8 @@ Package: seqminer
 Type: Package
 Title: Efficiently Read Sequence Data (VCF Format, BCF Format, METAL
         Format and BGEN Format) into R
-Version: 9.1
-Date: 2023-9-1
+Version: 9.3
+Date: 2023-11-18
 Authors@R: c(person("Xiaowei", "Zhan", email = "zhanxw@gmail.com", role = c("aut", "cre")),
            person("Dajiang", "Liu", email = "dajiang.liu@gmail.com", role = "aut"),
            person("Attractive Chaos", email = "attractor@live.co.uk", role = "cph", comment = "We have used the following software and made minimal necessary changes: Tabix, Heng Li <lh3@live.co.uk> (MIT license). We removed standard IO related functions, e.g. printf, fprintf ; also changed its un-safe pointer arithmetics."),	
@@ -23,7 +23,7 @@ Copyright: We have used the following software and made minimal
 License: GPL | file LICENSE
 URL: http://zhanxw.github.io/seqminer/
 BugReports: https://github.com/zhanxw/seqminer/issues
-Packaged: 2023-09-01 14:58:07 UTC; zhanxw
+Packaged: 2023-11-28 06:37:59 UTC; zhanxw
 Repository: CRAN
 Suggests: testthat, SKAT
 SystemRequirements: C++17, zlib headers and libraries, GNU make,
@@ -41,4 +41,4 @@ Author: Xiaowei Zhan [aut, cre],
   Genome Research Ltd (GRL) [cph],
   Facebook, Inc [cph],
   D. Richard Hipp [cph]
-Date/Publication: 2023-09-02 06:50:02 UTC
+Date/Publication: 2023-11-28 09:10:02 UTC
