@@ -1,5 +1,5 @@
-2bac2063e92620676fa177196bc51b23 *ChangeLog
-5c09740021ff15d4706aad4cbdffdbc6 *DESCRIPTION
+d84a5848b4caa7bb3dd48e66f57b1526 *ChangeLog
+c1be2357fd32cbb1db94c1c7ac310e53 *DESCRIPTION
 e56e0d459ff5cf6849aa20881c79bf0a *LICENSE
 f47f171258d37858064cb460710ce893 *NAMESPACE
 c7f735747447c989c5abec27f25dd8e6 *R/genMakefile.R
@@ -157,7 +157,7 @@ ea40b371329fb429318a1efa04feb75d *src/GeneAnnotation.h
 84c320efa2cd14da461a797540465cd3 *src/GeneLoader.cpp
 54e44e25de3378d5c46a8c0330f56320 *src/GeneLoader.h
 830acfc5c1e2ea6299693f55fd91e4c0 *src/GenomeScore.h
-d4e582d771ff7c37a86da0b8ab12766d *src/GenomeSequence.h
+a71b77fdc2a46b4298dddfbbe2f7d086 *src/GenomeSequence.h
 47e38da7377fc11ba10b374a6a4c13a8 *src/HiCExtract.h
 7379f7e85604c214732267e58e2a78b3 *src/Indexer.h
 422d83b84e05058cdff9a2032fc2b196 *src/LogFile.h
@@ -173,26 +173,26 @@ a25d2a59b7051ac1040b412af196a2d7 *src/PatternMatch.h
 0e84390253a3b4104ece60b20b4ebf02 *src/PeopleSet.cpp
 cbc062a62e16c021f8f7595252018847 *src/PeopleSet.h
 cfb270815c54addb7b420af7b125a741 *src/PlinkInputFile.cpp
-77160accd8bc74c1c2f8209dec6092f1 *src/PlinkInputFile.h
+1bd3d8b503c52f3a3926581560ca1993 *src/PlinkInputFile.h
 70bccc3a5d23fba307bccba4ae22060e *src/PlinkOutputFile.cpp
 05f8aad8f969c9ab5f8366eea52da98d *src/PlinkOutputFile.h
 baa046303cdb0d186d7ea8e1be042959 *src/Priority.h
 baf138407a38de43b7f6296e35271254 *src/Profiler.cpp
 720f60432fdcd570d5ec172ad025ab7e *src/Profiler.h
-8a0f2d7178dfae8f3a7ce44dc5c6f1d6 *src/R_CPP_interface.cpp
+cdfdb88cd46def21fa88bc0b4ed207d7 *src/R_CPP_interface.cpp
 5e45a302926d5fcbbdef33011e4caafb *src/R_CPP_interface.h
 976c9bf0d2f8a271883f5f34cef4c2f6 *src/Range.h
 b65edccbd58a9489cf5fa02de266fcc5 *src/RangeList.cpp
-9a48c61ffd6fa2399b7093ba3225e88e *src/RangeList.h
+92adf91c6b152d0107fb08e416afdf67 *src/RangeList.h
 58ff89023d1ba21a3e2dc28d91a94710 *src/Rannotation.cpp
 110ffcd97346fbbad8e9a29ea62b45df *src/Rannotation.h
 3d1b5b685392b80254b22242a5d43a9b *src/SequenceUtil.h
 09969ade4377eee9926543fc2a56494a *src/SimpleMatrix.cpp
 11ece06b1566755322771d64eb705bcc *src/SimpleMatrix.h
 6689621f7dbc49a740c515e216369be0 *src/SimpleTimer.h
-454c2df646e3604ac9610bc7f0838575 *src/SingleChromosomeBCFIndex.cpp
+966a57103eccbf4c57dc240f11283b93 *src/SingleChromosomeBCFIndex.cpp
 d8174c3b63510c52b545ab7c6ad861cd *src/SingleChromosomeBCFIndex.h
-e3de1d7bbf02477b3fac71024cd94e28 *src/SingleChromosomeVCFIndex.cpp
+2cd6ab66c9b1a3716c837402e4808f0d *src/SingleChromosomeVCFIndex.cpp
 627e259b9ae73856b51757b6c7895981 *src/SingleChromosomeVCFIndex.h
 794e93aa0605a3b79b119a00f9853ecd *src/StringTemplate.h
 b692c07b3d4829ff582d73b5ea0d7e58 *src/StringUtil.h
@@ -241,7 +241,7 @@ d8eb17ba4c89a4a9337986e12ecfd50c *src/khash.h
 05ffa87e772c91c82b5a7f33dea80aea *src/ksort.h
 6b1b42bbbbe56cdd2bdec966f4fbc3e7 *src/kstring.c
 e6fa98213a711d4a816a9c35a0a90bdb *src/kstring.h
-08a65c52a639592fe58f6ed2bc96e333 *src/plink2genoLoader.cpp
+c93caff4c29ab0e2cb337e5bb6258168 *src/plink2genoLoader.cpp
 1705f53f13f9969916df3ef711843b93 *src/plink2genoLoader.h
 e1ac23dc2ba6b66207ef5c25be77f325 *src/rvMetaLoader.cpp
 3e282c8377c668d4e6add53c051f8610 *src/rvMetaLoader.h
